--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,6 +48,7 @@ html {
     --color-dusty-blue: #829DAB;
     --color-la-purple:#5f6db3;
     --color-la-grey: #666;
+    --color-la-light-grey: #f6f6fb;
     
 }
 
