--- a/src/components/richTextStyles.css
+++ b/src/components/richTextStyles.css
@@ -26,12 +26,14 @@
 table {
     margin: 0 auto;
     border-collapse: collapse;
-    text-align: center;
     font-size: .8em;
+    width: 100%;
+    margin-top: calc(var(--grid-gutter) / 2);
+
 }
 
 table, th, td {
-    border: 1px solid #DAC8A4;
+    border-bottom: 1px solid var(--color-la-grey);
     vertical-align: middle;
 
   }
@@ -43,21 +45,42 @@ table, th, td {
   td p {
     vertical-align: middle;
     margin-bottom: 0;
+    /* font-size: var(--font-size-small);    */
+    padding-top: 0 !important;
+    
+
     
   }
 table tbody tr:nth-child(1) {
-    /* background-color: #ac9080; */
-    background-color: rgba(218, 200, 164, .5);
+    /* background-color: var(--color-la-light-grey); */
+    /* background-color: rgba(218, 200, 164, .5); */
     text-transform: uppercase;
-    font-size: .8em;
-    letter-spacing: .1em;;
+    /* font-size: .8em; */
+    letter-spacing: .1em;
+    
+  
 
     /* color: white; */
     
   
 
 }
+table tbody tr:nth-child(1) td p {
+  font-size: 10px;
+  padding-top: 0 !important;
+  line-height: normal !important;
 
+}
+
+tr:hover {
+  background-color: var(--color-la-light-grey);
+  /* transition: ease-in; */
+}
+
+tr:first-of-type:hover {
+  background-color:transparent;
+  /* transition: ease-in; */
+}
 
 li {
 
@@ -77,3 +100,10 @@ a.underline {
   color: var(--color-la-purple);
 }
 
+
+@media only screen and (min-width: 992px) {
+  table {
+    width: fit-content;
+    min-width: 50%;
+  }
+} 
