--- a/src/components/richTextStyles.css
+++ b/src/components/richTextStyles.css
@@ -41,7 +41,7 @@ table {
 
 
 table, th, td {
-    border-bottom: .2px solid #d1d1d1;
+    border-bottom: 1px solid #dddde2;
     vertical-align: middle;
 
   }
