added button link to nav button

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,7 +3,11 @@
 * {
     font-family: var(--font-family-body), sans-serif;
 }
-
+div.button,
+button,
+a {
+  cursor: pointer !important;
+}
 header {
   z-index: 100;
 }
