--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -145,7 +145,7 @@ html {
 
 }
 body {
-  background-color: var(--central-white);
+  /* background-color: var(--central-white); */
 }
 .h1, .h2, .h3, .h4, .h5, .h6 {
   line-height: 1.2;
