--- a/src/components/richTextStyles.css
+++ b/src/components/richTextStyles.css
@@ -89,9 +89,13 @@ tr:first-of-type:hover {
   /* transition: ease-in; */
 }
 
-li {
-
+/* li.bullets p {
+  text-align: left;
 }
+
+li.bullets p b {
+  text-align: left;
+} */
 
 body {
     /* background-color: #F1ECE1;
