--- a/src/components/richTextStyles.css
+++ b/src/components/richTextStyles.css
@@ -35,10 +35,10 @@ table {
 }
 
 @media only screen and (min-width: 992px) {
-  table {
+  /* table {
     width: fit-content;
     min-width: 50%;
-  }
+  } */
 }
 
 
