added sold out functionality (disabled buttons) to both room card and room pages; fixed styling of icons on room pages on mobile so that they fit better and text doesnt go on 2 lines; added links to each room type of the home page table; added links to the room card image and room card titles on the room page so that they link to the respective rooms; removed deluxe king rooms

--- a/src/components/richTextStyles.css
+++ b/src/components/richTextStyles.css
@@ -49,11 +49,16 @@ td {
   vertical-align: middle;
 
 }
-
+tr:hover  {
+  cursor: pointer !important;
+}
 td {
   padding: .8em;
 }
 
+td a {
+  cursor: pointer !important;
+}
 td p {
   vertical-align: middle;
   margin-bottom: 0;
